--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 "dependencies": {
   "@tailwindcss/typography": "^0.5.10",
   "daisyui": "^4.7.3",
-  "express": "^4.18.3",
-"node":^21.7.1
+  "express": "^4.18.3"
 },
 "scripts": {
   "start": "node server.js",
