--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 "dependencies": {
   "@tailwindcss/typography": "^0.5.10",
   "daisyui": "^4.7.3",
-  "express": "^4.18.3"
+  "express": "^4.18.3",
+"node":^21.7.1
 },
 "scripts": {
   "start": "node server.js",
